--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "@kachkaev/react-inline-js": "^0.2.0",
     "hosted-git-info": "^4.0.2",
     "lru-cache": "^6.0.0",
-    "next": "^10.2.0",
+    "next": "^10.2.3",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.2.3",
+    "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "unfetch": "^4.2.0",
     "url": "^0.11.0",
@@ -52,17 +52,17 @@
     "@kachkaev/prettier-config": "^1.2.0",
     "@types/hosted-git-info": "^3.0.1",
     "@types/lru-cache": "^5.1.0",
-    "@types/node": "^14.14.43",
+    "@types/node": "^14.17.1",
     "@types/node-fetch": "^2.5.10",
     "@types/styled-components": "^5.1.9",
-    "eslint": "^7.25.0",
+    "eslint": "^7.27.0",
     "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^11.0.0",
     "markdownlint-cli": "^0.27.1",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.4",
+    "prettier": "~2.2.1",
+    "typescript": "^4.3.2",
     "yarn-deduplicate": "^3.1.0"
   },
   "run-if-changed": {
